--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="">
           <img src="img/main/HeaderZ_03.jpg" alt="HeaderZ_03" class="gallery_grid_item">
         </a>
-        <a href="">
+        <a href="pages/headerz_04.html">
           <img src="img/main/HeaderZ_04.jpg" alt="HeaderZ_04" class="gallery_grid_item">
         </a>
         <a href="">
