--- a/pages/headerz_04.html
+++ b/pages/headerz_04.html
@@ -3,9 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../css/style_headerz_04.css">  
   <title>HeaderZ_04</title>
 </head>
 <body>
-  
+  <main class="main">
+      <div class="picture">
+        <img src="../img/headerz_04/bg_image.jpg" alt="">
+      </div>
+      <div class="menu">
+        <img src="../img/main/logo.svg" alt="Logo" class="logo">
+        <img src="../img/headerz_04/menu.svg" alt="" class="menu_icon">
+      </div>
+      <div class="submenu"></div>
+      <div class="search"></div>
+      <div class="slider"></div>
+  </main>
 </body>
 </html>
