Сверстал горизонтальное меню

--- a/pages/headerz_04.html
+++ b/pages/headerz_04.html
@@ -18,7 +18,34 @@
         <img src="../img/main/logo.svg" alt="Logo" class="logo">
         <img src="../img/headerz_04/menu.svg" alt="" class="menu_icon">
       </div>
-      <div class="submenu"></div>
+      <div class="submenu">
+        <ul class="menu_list">
+          <div class="menu_group_list">
+            <li>
+              <a class="submenu_link" href="#">Home</a>
+            </li>
+            <li>
+              <a class="submenu_link" href="#">Hotels<img class="arrow_down" src="../img/headerz_04/small_arrow_down.svg" alt=""></a>
+            </li>
+          </div>
+          <div class="menu_group_list">
+            <li>
+              <a class="submenu_link" href="#">Contact</a>
+            </li>
+            <li>
+              <a class="submenu_link" href="#">About Us</a>
+            </li>
+            <div class="submenu_search_block">
+              <li>
+                <a class="submenu_link" href="#"><img class="menu_icons" src="../img/headerz_04/search_icon.svg" alt="Search"></a>
+              </li>
+              <li>
+                <a class="submenu_link" href="#"><img class="menu_icons" src="../img/headerz_04/cart_icon.svg" alt="Search"></a>
+              </li>
+            </div>
+          </div>
+        </ul>
+      </div>
       <div class="search"></div>
       <div class="slider"></div>
   </main>
