Сверстал раздел с поиском отелей

--- a/pages/headerz_04.html
+++ b/pages/headerz_04.html
@@ -46,7 +46,19 @@
           </div>
         </ul>
       </div>
-      <div class="search"></div>
+      <div class="search">
+        <h1 class="search_title"><span class="accent_title">Search</span> Hotels</h1>
+        <form action="">
+          <select name="" id="">
+            <option value="">Type Of Room</option>
+          </select>
+          <input type="date" name="" id="">
+          <select name="" id="">
+            <option value="">Rooms</option>
+          </select>
+          <button id="btn_search">Search</button>
+        </form>
+      </div>
       <div class="slider"></div>
   </main>
 </body>
