Исправил ошибки с элементами грид-сетки

--- a/pages/headerz_04.html
+++ b/pages/headerz_04.html
@@ -11,9 +11,7 @@
 </head>
 <body>
   <main class="main">
-      <div class="picture">
-        <img src="../img/headerz_04/bg_image.jpg" alt="">
-      </div>
+      <div class="picture"></div>
       <div class="menu">
         <img src="../img/main/logo.svg" alt="Logo" class="logo">
         <img src="../img/headerz_04/menu.svg" alt="" class="menu_icon">
