--- a/pages/headerz_04.html
+++ b/pages/headerz_04.html
@@ -11,53 +11,66 @@
 </head>
 <body>
   <main class="main">
-      <div class="picture"></div>
-      <div class="menu">
-        <img src="../img/main/logo.svg" alt="Logo" class="logo">
-        <img src="../img/headerz_04/menu.svg" alt="" class="menu_icon">
-      </div>
-      <div class="submenu">
-        <ul class="menu_list">
-          <div class="menu_group_list">
-            <li>
-              <a class="submenu_link" href="#">Home</a>
-            </li>
-            <li>
-              <a class="submenu_link" href="#">Hotels<img class="arrow_down" src="../img/headerz_04/small_arrow_down.svg" alt=""></a>
-            </li>
-          </div>
-          <div class="menu_group_list">
-            <li>
-              <a class="submenu_link" href="#">Contact</a>
-            </li>
-            <li>
-              <a class="submenu_link" href="#">About Us</a>
-            </li>
-            <div class="submenu_search_block">
+      <div class="container">
+        <div class="picture"></div>
+        <div class="menu">
+          <a href="../index.html"><img src="../img/main/logo.svg" alt="Logo" class="logo"></a>
+          <img src="../img/headerz_04/menu.svg" alt="" class="menu_icon">
+        </div>
+        <div class="submenu">
+          <ul class="menu_list">
+            <div class="menu_group_list">
               <li>
-                <a class="submenu_link" href="#"><img class="menu_icons" src="../img/headerz_04/search_icon.svg" alt="Search"></a>
+                <a class="submenu_link" href="#">Home</a>
               </li>
               <li>
-                <a class="submenu_link" href="#"><img class="menu_icons" src="../img/headerz_04/cart_icon.svg" alt="Search"></a>
+                <a class="submenu_link" href="#">Hotels<img class="arrow_down" src="../img/headerz_04/small_arrow_down.svg" alt=""></a>
               </li>
             </div>
+            <div class="menu_group_list">
+              <li>
+                <a class="submenu_link" href="#">Contact</a>
+              </li>
+              <li>
+                <a class="submenu_link" href="#">About Us</a>
+              </li>
+              <div class="submenu_search_block">
+                <li>
+                  <a class="submenu_link" href="#"><img class="menu_icons" src="../img/headerz_04/search_icon.svg" alt="Search"></a>
+                </li>
+                <li>
+                  <a class="submenu_link" href="#"><img class="menu_icons" src="../img/headerz_04/cart_icon.svg" alt="Search"></a>
+                </li>
+              </div>
+            </div>
+          </ul>
+        </div>
+        <div class="search">
+          <h1 class="search_title"><span class="accent_title">Search</span> Hotels</h1>
+          <form action="">
+            <select name="" id="">
+              <option value="">Type Of Room</option>
+            </select>
+            <input type="date" name="" id="">
+            <select name="" id="">
+              <option value="">Rooms</option>
+            </select>
+            <button id="btn_search">Search</button>
+          </form>
+        </div>
+        <div class="slider">
+          <div class="slider_switch_block">
+            <h2 class="number_photo">02</h2>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
           </div>
-        </ul>
+          <div class="slider_block">
+            <p>Last Minute Festive Packages<br>From Superbreak</p>
+            <button class="arrow_right"><img src="../img/headerz_04/arrow_right.svg" alt=""></button>
+          </div>
+        </div>
       </div>
-      <div class="search">
-        <h1 class="search_title"><span class="accent_title">Search</span> Hotels</h1>
-        <form action="">
-          <select name="" id="">
-            <option value="">Type Of Room</option>
-          </select>
-          <input type="date" name="" id="">
-          <select name="" id="">
-            <option value="">Rooms</option>
-          </select>
-          <button id="btn_search">Search</button>
-        </form>
-      </div>
-      <div class="slider"></div>
   </main>
 </body>
 </html>
