--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="">
           <img src="img/main/HeaderZ_10.jpg" alt="HeaderZ_10" class="gallery_grid_item">
         </a>
-        <a href="">
+        <a href="pages/headerz_11.html">
           <img src="img/main/HeaderZ_11.jpg" alt="HeaderZ_11" class="gallery_grid_item">
         </a>
         <a href="">
