--- a/pages/headerz_11.html
+++ b/pages/headerz_11.html
@@ -6,10 +6,43 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/style_headerz_04.css">  
+  <link rel="stylesheet" href="../css/style_headerz_11.css">  
   <title>HeaderZ_11</title>
 </head>
 <body>
-  
+  <main class="main">
+    <div class="container">
+      <div class="primary_letters first_col">
+        <p class="h_letter">h</p>
+        <p class="m_letter">m</p>
+      </div>
+      <div class="primary_letters second_col">
+        <p class="o_letter">o</p>
+        <img class="arrow_right" src="../img/headerz_11/arrow.svg" alt="">
+        <p class="e_letter">e</p>
+      </div>
+      <div class="primary_words">
+        <p class="about_word">about</p>
+        <p class="work_word">work</p>
+      </div>
+      <div class="foreground">
+        <nav class="menu">
+          <a class="menu_links" href="#">home</a>
+          <a class="menu_links" href="#">work</a>
+          <a class="menu_links" href="#">about</a>
+        </nav>
+        <p class="describe describe_greeting">Hey, I’m Hristo, a Freelance Digital Designer based in Frankfurt. I collaborate with inspiring brands, businesses &
+        start-ups to shape their digital projects.</p>
+        <p class="describe describe_feedback">Need a hand? I have two – <a href="#">mail me</a></p>
+        <p class="describe describe_skills">My skills include product design, interactive design, aesthetic art direction, prototyping, mobile design, branding,
+        front-end development and team leadership.</p>
+        <img class="main_img" src="../img/headerz_11/astronaut.png" alt="">
+        <div class="social_media">
+          <a class="social_media_links" href="#"><img src="../img/headerz_11/facebook.svg" alt=""></a>
+          <a class="social_media_links" href="#"><img src="../img/headerz_11/instagram.svg" alt=""></a>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
