--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="">
           <img src="img/main/HeaderZ_08.jpg" alt="HeaderZ_08" class="gallery_grid_item">
         </a>
-        <a href="">
+        <a href="pages/headerz_09.html">
           <img src="img/main/HeaderZ_09.jpg" alt="HeaderZ_09" class="gallery_grid_item">
         </a>
         <a href="">
