--- a/pages/headerz_09.html
+++ b/pages/headerz_09.html
@@ -12,9 +12,74 @@
 <body>
   <main class="main">
     <div class="container">
+      <!-- Меню -->
       <div class="menu">
         <a href="../index.html"><img src="../img/main/logo.svg" alt="Logo" class="logo"></a>
         <img src="../img/HeaderZ_09/menu_icon.svg" alt="" class="menu_icon">
+      </div>
+      <!-- Горизонтальное меню -->
+      <div class="submenu">
+        <ul class="menu_list">
+          <div class="menu_group_list">
+            <li>
+              <a href="#" class="submenu_link">Watches <img src="/img/headerZ_09/arrow_down_icon.svg" alt="" class="arrow_down"></a>
+            </li>
+            <li>
+              <a href="#" class="submenu_link">Watchmaking<img src="/img/headerZ_09/arrow_down_icon.svg" alt="" class="arrow_down"></a>
+            </li>
+            <li>
+              <a href="#" class="submenu_link">Service <img src="/img/headerZ_09/arrow_down_icon.svg" alt="" class="arrow_down"></a>
+            </li>
+          </div>
+          <div class="menu_group_list secondary_menu_list">
+            <li>
+              <a href="#" class="submenu_link">Blog</a>
+            </li>
+            <li>
+              <a href="#" class="submenu_link">About Us</a>
+            </li>
+            <li>
+              <a href="#" class="submenu_link">Contact</a>
+            </li>
+          </div>
+        </ul>
+      </div>
+      <!-- Colorpicker -->
+      <div class="colorpicker">
+        <h5>Color</h5>
+        <img  src="../img/headerZ_09/color_picker.png" alt="Colorpicker">
+      </div>
+      <!-- Описание -->
+      <div class="description">
+        <h1 class="description_title">nom</h1>
+        <p class="description_model"><b>NOMOS GLASHÜTTE</b> <br>AUTOBAHN NEOMATIK 41 DATE <br> MIDNIGHT BLUE</p>
+        <img class="description_plus" src="../img/headerZ_09/plus_icon.svg" alt="">
+        <p class="description_slogan">Can a wristwatch <br> give you confidence? <br> It certainly can.</p>
+      </div>
+      <!-- Watch -->
+      <div class="watch_box">
+        <img class="watch_arrow_up" src="../img/headerZ_09/arrow_icon.svg" alt="">
+        <img class="watch" src="../img/headerZ_09/Nomos_Watch.png" alt="">
+        <img class="watch_arrow_down" src="../img/headerZ_09/arrow_icon.svg" alt="">
+      </div>
+      <!-- Общий блок -->
+      <div class="secondary_information">
+        <!-- Поиск -->
+        <div class="search_box">
+          <a href=""><img src="../img/headerZ_09/search_icon.svg" alt=""></a>
+          <a href=""><img src="../img/headerZ_09/cart_icon.svg" alt=""></a>
+        </div>
+        <!-- Блок с дополнительной информацией -->
+        <div class="secondary_description">
+          <p class="description_price">Reference 1302 <br> <span class="price">3,800 EUR</span></p>
+          <h1 class="description_title secondary_title">s</h1>
+          <button class="btn_buy"><img class="bracket_left" src="../img/headerZ_09/bracket_icon.svg" alt="">Add to bag<img class="bracket_right" src="../img/headerZ_09/bracket_icon.svg" alt=""></button>        
+        </div>
+        <!-- Соц. сети -->
+        <div class="social_media">
+          <a href="#"><img src="../img/headerZ_09/facebook_icon.svg" alt="Facebook"></a>
+          <a href="#"><img src="../img/headerZ_09/instagram_icon.svg" alt="Instagram"></a>
+        </div>
       </div>
     </div>
   </main>
