--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <a href="">
           <img src="img/main/HeaderZ_13.jpg" alt="HeaderZ_13" class="gallery_grid_item">
         </a>
-        <a href="">
+        <a href="pages/headerz_14.html">
           <img src="img/main/HeaderZ_14.jpg" alt="HeaderZ_14" class="gallery_grid_item">
         </a>
         <a href="">
